=== randtoolbox: an R package for random number generation and testing ===

Version 1.30.1
=============
- bug fixes on array limit issues in Fortran code (in INITSOBOL).
- warning fix on unused variable in Fortran code (in SGENSCRMU).
- bug fixes on multiple defintion issues (for WELL_get_set_entry_point, 
WELLrng, setSeed4WELL) in C header files.

Version 1.30.0 (Version in Memoriam of Diethelm and Barbara Wuertz)
=============
- disable the use of set.generator(name="congruRand",...).
- clean up C code.

Version 1.20 (never released on CRAN)
=============
- translate Fortran code of Diethelm Wuertz for Halton sequence into C.
- by default halton() use the C code slightly faster than the Fortran code.
- start to translate Fortran code of Diethelm Wuertz for Sobol sequence into C.
- add defensive programming for QMC.

BUGS FIX
- scrambling = 1, 3 for Sobol sequences (provided by Makoto Matsumoto and Mutsuo Saito). 
- mixed = TRUE for QMC sequences. 
- correct use of 64-bit integer type
- correct failures in if statements (length > 1 in coercion to logical) 
in quasiRNG.R and pseudoRNG.R

NOTE FIX
- usage of R_useDynamicSymbols to preclude compilation
NOTEs, better registration of native routines and reduced
symbol visibility.

Version 1.17 and 1.17.1
=============
- change DESCRIPTION file.
- update NAMESPACE for R 3.3.0.
- update the LICENSE file.
- raise a warning when scrambling for Sobol sequences is incorrect.

BUG REPORT 
(by Dan Souther, Kemal Dincer Dingec, Marius Hofert, Nicolas Chopin, Andrei Kostyrka)
- scrambling = 1, 3 for Sobol sequences.
(by Hiroyuki Kawakatsu)
- mixed = TRUE for QMC sequences. 

Version 1.16
=============
- change title and other minor things in vignettes.

Version 1.15
=============

- remove the use of 'long long' in some C code.
- update LICENCE file.
- move autoconf files to tools directory.
- no longer use a4 paper format in vignette.

Version 1.14
=============

- change licence from BSD_2_clause to BSD_3_clause.