@@ -529,22 +529,17 @@ C                   3 - OWEN + FAURE-TEZUKA TYPE SCRAMBLING
 C       iSEED     - SCRAMBLING iSEED
       
       INTEGER MAXDIM,MAXDEG,MAXBIT,IFLAG
-CC      DW ADDED FOLLOWING LINE:
+CC    D.W. ADDED FOLLOWING LINE:
       INTEGER P,PP
       PARAMETER (MAXDIM=1111,MAXDEG=13,MAXBIT=30)
       INTEGER ATMOST,DIMEN,TAUS,COUNT,MAXCOL,S
+C     >>> use parameter to declare large arrays <<<
+      INTEGER SHIFT(MAXDIM),LSM(MAXDIM,31),TV(MAXDIM,31,31)
       INTEGER POLY(2:MAXDIM),VINIT(2:MAXDIM,MAXDEG)
       INTEGER SV(DIMEN,MAXBIT),V(DIMEN,MAXBIT)
       INTEGER I,J,K,L,M,NEWV,TAU(MAXDEG)
       INTEGER USM(31,31),USHIFT(31)
-CC      INTEGER TEMP1,TEMP2,TEMP4
       INTEGER TEMP1,TEMP2,TEMP3,TEMP4
-C     split the line to use allocatable arrays
-C      INTEGER DIMENSION(:) ALLOCATABLE :: SHIFT
-C      ALLOCATE ( SHIFT(1111) )
-      INTEGER SHIFT(MAXDIM)
-      INTEGER LSM(1111,31)
-      INTEGER TV(1111,31,31)
       DOUBLE PRECISION QUASI(DIMEN),RECIPD
       INTEGER iSEED
       LOGICAL INCLUD(MAXDEG)
@@ -1529,9 +1524,6 @@ C     SET UP FIRST VECTOR AND VALUES FOR "GOSOBL"
       DO I = 1, S
          QUASI(I) = SHIFT(I)*RECIPD
       ENDDO
-      
-C     desallocate three arrays
-C      DEALLOCATE( SHIFT )
       
       RETURN
       END
